# Stripe-Test

./: .env.example  README.md  docker-compose.yml
server/: conftest.py  pyproject.toml  setup.cfg
server/apps/purchases/: admin.py  factories.py  models.py  urls.py  views.py
server/apps/purchases/migrations/: 0001_initial.py
server/config/: urls.py
server/config/settings/: installed_apps.py  settings.py
server/scripts/: fill_sample_data.py
server/templates/: base.html
server/templates/item/: detail_item.html
server/templates/order/: detail_order.html
